// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TitleWidget > renders a title view widget component 1`] = `
<h1
  className="metadata title widget documentFirstHeading"
>
  Foo bar
</h1>
`;

exports[`TitleWidget > renders a title view widget component with children 1`] = `
<h1
  className="metadata title widget documentFirstHeading"
>
  <strong>
    Foo bar
  </strong>
</h1>
`;

exports[`TitleWidget > renders an empty title view widget component 1`] = `null`;
